# Synth

./: .env.example  .gitignore  =1.13.0  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  test_connection.py
alembic/: env.py
alembic/versions/: 3a5df13083e7_create_risk_assessment_tables.py
api/: __init__.py  auth.py  dependencies.py  middleware.py
api/routes/: __init__.py  health.py  storage.py
api/routes/common/: __init__.py  dependencies.py  (+1 more)
backend/app/: __init__.py  main.py
backend/policies/: orchestration_policy.md  tagging_rules.md  task_splitting.md
config/: __init__.py  settings.py  storage.py
core/: __init__.py  exceptions.py  logging.py  security.py  storage.py
db/: __init__.py  database.py  health.py  migrations.py  operations.py  session.py
frontend/: IMPLEMENTATION.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
models/: __init__.py  base.py  file.py  reasoning_trace.py  risk_assessment.py  task.py  user.py
repositories/: __init__.py  base.py  file.py  risk_assessment.py  task.py  user.py
schemas/: __init__.py  common.py  risk_assessment.py  storage.py
scripts/: __init__.py  create_admin.py  migrate.py
services/: __init__.py  edge_function.py  storage.py
tests/: __init__.py  conftest.py  test_core_storage.py  test_database.py  test_dependencies_storage.py  test_file_model.py  test_file_repository.py  test_health.py  test_models.py  test_routes_common.py  test_routes_graph.py  test_routes_validator.py  test_schemas.py  test_storage_config.py  test_storage_service.py
(+116 files in other folders)
